changes for release prep